tests/rosetta/out/Go/abbreviations-automatic.error
run error: exit status 1
# command-line-arguments
../../tests/rosetta/out/Go/abbreviations-automatic.go:21:13: cannot use append(_convSlice[string, any](words), cur) (value of type []any) as []string value in assignment
../../tests/rosetta/out/Go/abbreviations-automatic.go:30:11: cannot use append(_convSlice[string, any](words), cur) (value of type []any) as []string value in assignment
../../tests/rosetta/out/Go/abbreviations-automatic.go:67:10: cannot use append(_convSlice[string, any](out), x) (value of type []any) as []string value in assignment
../../tests/rosetta/out/Go/abbreviations-automatic.go:85:12: cannot use append(_convSlice[string, any](abbrs), takeRunes(words[i], l)) (value of type []any) as []string value in assignment
../../tests/rosetta/out/Go/abbreviations-automatic.go:219:6: main redeclared in this block
	../../tests/rosetta/out/Go/abbreviations-automatic.go:106:6: other declaration of main
